# doclingllm

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: agent-rules.mdc  doclingllm.mdc  template_2_0.mdc
deploy/: .env.defaults  .env.example  docker-compose.yml
deploy/config/: docling-serve.yaml  gateway-models.template.yaml  gateway-models.yaml  gateway-runtime.defaults.yaml
deploy/docling-serve/: Dockerfile  apply_app_vlm_middleware_patch.py  apply_gradio_vlm_preset_patch.py  logging_config.py  vlm_preset_middleware.py
deploy/gateway/: Dockerfile
docling-serve/: .env.example  .pre-commit-config.yaml  CHANGELOG.md  Containerfile  Makefile  README.md  os-packages.txt  pyproject.toml
docling-serve/docling_serve/: __main__.py  app.py  gradio_ui.py  helper_functions.py  logging_config.py  orchestrator_factory.py  otel_instrumentation.py  policy.py  public_errors.py  ray_metrics_collector.py  response_preparation.py  rq_job_wrapper.py  rq_worker_instrumented.py  settings.py  websocket_notifier.py
docling-serve/docs/: configuration.md  ray-orchestrator-architecture-page-slicing-delta.md  usage.md
docling-serve/examples/: OTEL.md  docker-compose-otel.yaml  grafana-datasources.yaml  otel-collector-config.yaml  tempo.yaml  (+2 more)
docs/: README.md  environment_fix_guide.md  gateway_api_contract.md  subagent_setup_guide.md
plans/: AppGraph.xml  Architecture.md  DevelopmentPlan.md  GatewayAdminUI.md  README.md  business_requirements.md
scripts/: healthcheck.sh  redeploy-fast.sh  redeploy.sh  start.sh  stop.sh
src/: README.md
tests/: README.md  conftest.py  conftest_admin.py  conftest_gateway.py  test_compose_config.py  test_docling_serve_quiet_access_filter.py  test_gateway_admin_config_export.py  test_gateway_admin_config_store.py  test_gateway_admin_docling_generator.py  test_gateway_admin_gradio_handlers.py  test_gateway_admin_mount.py  test_gateway_admin_reload.py  test_gateway_admin_routing_merge.py  test_gateway_app.py  test_gateway_client.py  test_gateway_config.py  test_gateway_kserve.py  test_gateway_kserve_binary.py  test_gateway_kserve_relay.py  test_gateway_openai_proxy.py  test_gateway_parsers.py  test_gateway_request_logging.py  test_gradio_vlm_preset_patch.py  test_guide.md  test_lib.py
work/: README.md
(+52 files in other folders)
