[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doclingllm"
version = "0.3.5"
description = "Model Gateway wrapper for docling-serve remote API inference"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",       # ASGI gateway routes; PyPI latest 2026-07-16
    "uvicorn>=0.51.0",        # Production server in gateway container
    "httpx>=0.28.1",          # Outbound HTTP to vision/text backends
    "pydantic-settings>=2.14.2",  # Typed env config loading
    "numpy>=2.5.1",           # KServe tensor encode/decode
    "pyyaml>=6.0.3",          # gateway-models.yaml declarative routing
    "pillow>=12.3.0",         # KServe UINT8 tensor to PNG conversion
    "gradio>=6.20.0,<7.0",    # Admin UI at /admin (Gradio 6.x)
]

[project.scripts]
doclingllm-gateway = "doclingllm.gateway.app:run_gateway"

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
